--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -309,11 +309,12 @@
             android:layout_marginTop="10dp"
             android:background="@drawable/arithmetic_button_background"
             android:onClick="addBTNPush"
+            android:layout_marginStart="10dp"
             android:text="@string/addText"
             android:textColor="@color/tanAccent"
             android:textSize="28sp"
-            app:layout_constraintTop_toBottomOf="@+id/button9"
-            tools:layout_editor_absoluteX="294dp" />
+            app:layout_constraintStart_toEndOf="@+id/button"
+            app:layout_constraintTop_toBottomOf="@+id/button9" />
 
         <Button
             android:id="@+id/button6"
@@ -363,11 +364,12 @@
             android:layout_marginTop="10dp"
             android:background="@drawable/arithmetic_button_background"
             android:onClick="subtractBTNPush"
+            android:layout_marginStart="10dp"
             android:text="@string/subtractText"
             android:textColor="@color/tanAccent"
             android:textSize="28sp"
-            app:layout_constraintTop_toBottomOf="@+id/button13"
-            tools:layout_editor_absoluteX="294dp" />
+            app:layout_constraintStart_toEndOf="@+id/button6"
+            app:layout_constraintTop_toBottomOf="@+id/button13" />
 
         <Button
             android:id="@+id/button10"
@@ -417,11 +419,12 @@
             android:layout_marginTop="10dp"
             android:background="@drawable/arithmetic_button_background"
             android:onClick="multiplyBTNPush"
+            android:layout_marginStart="10dp"
             android:text="@string/multiplyText"
             android:textColor="@color/tanAccent"
             android:textSize="28sp"
-            app:layout_constraintTop_toBottomOf="@+id/button17"
-            tools:layout_editor_absoluteX="294dp" />
+            app:layout_constraintStart_toEndOf="@+id/button10"
+            app:layout_constraintTop_toBottomOf="@+id/button17" />
 
         <Button
             android:id="@+id/button14"
@@ -469,13 +472,14 @@
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_marginTop="10dp"
+            android:layout_marginStart="10dp"
             android:background="@drawable/arithmetic_button_background"
             android:onClick="dividePush"
             android:text="@string/divideText"
             android:textColor="@color/tanAccent"
             android:textSize="28sp"
-            app:layout_constraintTop_toBottomOf="@+id/button3"
-            tools:layout_editor_absoluteX="294dp" />
+            app:layout_constraintStart_toEndOf="@+id/button14"
+            app:layout_constraintTop_toBottomOf="@+id/button3" />
 
         <Button
             android:id="@+id/button18"
